// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clears coordinates when mouse moves off the map 1`] = `
<div
  id="ol-coords-case"
  style={
    Object {
      "display": "block",
    }
  }
/>
`;

exports[`reprojects (0,0) to (-45, 90) for EPSG:3413 1`] = `
<div
  id="ol-coords-case"
  style={
    Object {
      "display": "block",
    }
  }
>
  <div
    className="wv-coords-map wv-coords-map-btn"
    onClick={[Function]}
  >
    <span
      className="map-coord"
    >
      90.0000°, -45.0000°
       
      EPSG:3413
    </span>
    <div
      className="coord-btn"
    >
      <i
        className="coord-switch"
      />
    </div>
  </div>
</div>
`;

exports[`shows 20°00.000'N, 10°00.000'E when set to degrees and minutes format 1`] = `
<div
  id="ol-coords-case"
  style={
    Object {
      "display": "block",
    }
  }
>
  <div
    className="wv-coords-map wv-coords-map-btn"
    onClick={[Function]}
  >
    <span
      className="map-coord"
    >
      20°00.000'N,  10°00.000'E
       
      EPSG:4326
    </span>
    <div
      className="coord-btn"
    >
      <i
        className="coord-switch"
      />
    </div>
  </div>
</div>
`;

exports[`shows coordinates of (-160, 20) when moving the mouse over wrapped 1`] = `
<div
  id="ol-coords-case"
  style={
    Object {
      "display": "block",
    }
  }
>
  <div
    className="wv-coords-map wv-coords-map-btn"
    onClick={[Function]}
  >
    <span
      className="map-coord"
    >
      20.0000°, -160.0000°
       
      EPSG:4326
    </span>
    <div
      className="coord-btn"
    >
      <i
        className="coord-switch"
      />
    </div>
  </div>
</div>
`;

exports[`shows coordinates of (10, 20) when moving the mouse 1`] = `
<div
  id="ol-coords-case"
  style={
    Object {
      "display": "block",
    }
  }
>
  <div
    className="wv-coords-map wv-coords-map-btn"
    onClick={[Function]}
  >
    <span
      className="map-coord"
    >
      20.0000°, 10.0000°
       
      EPSG:4326
    </span>
    <div
      className="coord-btn"
    >
      <i
        className="coord-switch"
      />
    </div>
  </div>
</div>
`;
